improved GUI for dependency analysis and outputbox